@@ -1,15 +1,0 @@
-#!/bin/sh -e
-
-if [ "$1" = "configure" ]; then
-    if dpkg-vendor --derives-from ubuntu ; then
-        LIBVIRTGRP=libvirtd
-    else
-        LIBVIRTGRP=libvirt
-    fi
-    if ! getent group ${LIBVIRTGRP} | grep -qE '\<nova\>'
-    then
-        adduser nova ${LIBVIRTGRP}
-    fi
-fi
-
-#DEBHELPER#
